Resolves: tdf#35152 select first fontwork if any are available

Change-Id: I29ab070f9664939d1e10d1cccb2a62cfdc0570e7
Reviewed-on: https://gerrit.libreoffice.org/66337
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>